Fix CSV file path

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,12 +19,7 @@
                     <select id="categories" class="form-control" style="margin:20px;">
                         <option value="">Select category</option>
                     </select>
-                    <div id="chart_div" style="display: none">
-                    </div>
-                    <div id="loading" class="spinner">
-                        <div class="double-bounce1"></div>
-                        <div class="double-bounce2"></div>
-                    </div>
+                    <div id="chart_div" style="display: none"></div>
                 </div>
             </div>
         </div>
