--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Map charts</title>
+    <title>GeoCharts</title>
     <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -11,7 +11,7 @@
 <body>
     <div id="main" class="container">
         <div id="header">
-            <h1 class="text-center">Map charts</h1>
+            <h1 class="text-center" style="margin-top:40px;"><kbd>GeoCharts</kbd></h1>
         </div>
         <div id="content">
             <div class="row">
